--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -3,44 +3,28 @@
 /*MARGIN*/
 .header {
   width: 90%;
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   margin-top: 1rem;
-}
-.header_icon {
-  width: 50px;
-  height: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-}
-.header_icon--bar {
-  display: block;
-  width: 35px;
-  height: 3px;
-  background-color: #8691ac;
-  position: relative;
-}
-.header_icon--bar::after, .header_icon--bar::before {
-  content: "";
-  position: absolute;
-  display: block;
-  width: inherit;
-  height: inherit;
-  background-color: #8691ac;
-  border-radius: 10px;
-  top: 8px;
-}
-.header_icon--bar::before {
-  top: -8px;
 }
 .header_image img {
   display: block;
   width: auto;
   height: 50px;
   padding-top: 1rem;
+}
+.header_nav {
+  width: 90vw;
+  padding-top: 2rem;
+}
+.header_nav--ul {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 16px;
+}
+.header_nav--ul a {
+  color: #1a1a1a;
 }
 
 * {
@@ -77,38 +61,23 @@ li {
 .banner {
   width: 90vw;
   margin-top: 5rem;
+  background-color: #fdf0ed;
 }
-.banner_bg {
-  max-width: 75%;
-  margin: auto;
-}
-.banner_bg--img {
-  animation-name: rotacion;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-delay: 0.5s;
-  animation-timing-function: linear;
+.banner_text {
+  font-size: 24px;
+  text-align: center;
+  padding: 2rem 0 6rem 0.5rem;
 }
 .banner_text {
   font-size: 24px;
   text-align: center;
 }
 .banner_text--title {
-  font-weight: 400;
-  color: #224953;
+  color: #1a1a1a;
+  font-size: 18vw;
+  text-align: left;
 }
 
-@keyframes rotacion {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(359deg);
-  }
-}
 .main {
   display: grid;
   grid-template-columns: 100%;
@@ -195,17 +164,6 @@ li {
   line-height: 30px;
   font-size: 30px;
 }
-.proyects_text--rotateplane {
-  width: 60px;
-  height: 60px;
-  background-color: #1a1a1a;
-  display: inline-block;
-  clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
-  animation-name: rotateplane;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
 .proyects_container {
   background-color: #224953;
   display: grid;
@@ -256,6 +214,176 @@ li {
   }
   100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
+.lds-grid {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-grid 1.2s linear infinite;
+}
+
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+.contact {
+  width: 90%;
+  margin-top: 35rem;
+  background-color: #224953;
+}
+.contact_title {
+  font-size: 18vw;
+  display: inline-block;
+  margin: -11.5rem 0;
+}
+.contact_text {
+  color: whitesmoke;
+  font-size: 8vmin;
+  padding: 5rem;
+}
+.contact_text--paragraph {
+  text-align: left;
+  font-size: 16px;
+  line-height: 30px;
+  padding: 1rem 3rem 3rem 0;
+}
+.contact_text--email {
+  color: whitesmoke;
+}
+.contact_text--email::after {
+  content: "";
+  border-bottom: 3px solid;
+  display: block;
+  padding-top: 7rem;
+  width: 10rem;
+  margin-bottom: 3rem;
+}
+.contact_text--image {
+  display: none;
+}
+
+.go {
+  position: fixed;
+  bottom: -2rem;
+  right: -2rem;
+  width: 6.6rem;
+  height: 6.6rem;
+  z-index: -1;
+}
+.go_button {
+  width: 0;
+  height: 0;
+  background-color: #d9866d;
+  cursor: pointer;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+.go_button img {
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 0.2s;
+}
+
+.show {
+  z-index: 10;
+}
+
+.show .go_button {
+  animation: popup 0.3s ease-in-out;
+  width: 4rem;
+  height: 4rem;
+  z-index: 11;
+}
+
+.show img {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+@keyframes popup {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  50% {
+    width: 6rem;
+    height: 6rem;
+  }
+  100% {
+    width: 4rem;
+    height: 4rem;
   }
 }
 
