--- a/src/styles/sass/components/_hedaer.scss
+++ b/src/styles/sass/components/_hedaer.scss
@@ -1,43 +1,25 @@
-.header{
-    width: 90%;
+.header {
+  width: 90%;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &_image img {
+    display: block;
+    width: auto;
     height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    margin-top: 1rem;
-    &_icon{
-        width: 50px;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        
-        &--bar{
-            display: block;
-            width: 35px;
-            height: 3px;
-            background-color: $burguer;
-            position: relative;
-            &::after,
-            &::before{
-                content: '';
-                position: absolute;
-                display: block;
-                width: inherit;
-                height: inherit;
-                background-color: $burguer;
-                border-radius: 10px;
-                top: 8px;
-            }
-            &::before{
-                top: -8px;
-            }
-        }
+    padding-top: 1rem;
+  }
+  &_nav{
+    width: 90vw;
+    padding-top: 2rem;
+    &--ul{
+      display: flex;
+      justify-content: space-evenly;
+      font-size: 16px;
+      & a{
+        color: $black;
+      }
     }
-    &_image img{
-        display: block;
-        width: auto;
-        height: 50px;
-        padding-top: 1rem;
-    }
+  }
 }
