--- a/src/styles/sass/components/_proyects.scss
+++ b/src/styles/sass/components/_proyects.scss
@@ -22,30 +22,31 @@
       line-height: 30px;
       font-size: 30px;
     }
-    &--rotateplane {
-      width: 60px;
-      height: 60px;
-      background-color: $black;
-      display: inline-block;
-      clip-path: polygon(
-        20% 0%,
-        0% 20%,
-        30% 50%,
-        0% 80%,
-        20% 100%,
-        50% 70%,
-        80% 100%,
-        100% 80%,
-        70% 50%,
-        100% 20%,
-        80% 0%,
-        50% 30%
-      );
-      animation-name: rotateplane;
-      animation-duration: 2s;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-    }
+
+    // &--rotateplane {
+    //   width: 60px;
+    //   height: 60px;
+    //   background-color: $black;
+    //   display: inline-block;
+    //   clip-path: polygon(
+    //     20% 0%,
+    //     0% 20%,
+    //     30% 50%,
+    //     0% 80%,
+    //     20% 100%,
+    //     50% 70%,
+    //     80% 100%,
+    //     100% 80%,
+    //     70% 50%,
+    //     100% 20%,
+    //     80% 0%,
+    //     50% 30%
+    //   );
+    //   animation-name: rotateplane;
+    //   animation-duration: 2s;
+    //   animation-iteration-count: infinite;
+    //   animation-timing-function: linear;
+    // }
   }
   &_container {
     background-color: $strong-blue;
@@ -96,5 +97,73 @@
   }
   100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
+.lds-grid {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  animation: lds-grid 1.2s linear infinite;
+}
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+@keyframes lds-grid {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
   }
 }
