--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -7,3 +7,5 @@
 @import './components/banner';
 @import './components/abouts';
 @import './components/proyects';
+@import './components/contact';
+@import './components/chevron';
