--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -23,6 +23,11 @@
   justify-content: space-evenly;
   font-size: 16px;
 }
+@media (min-width: 768px) {
+  .header_nav--ul {
+    font-size: 20px;
+  }
+}
 .header_nav--ul a {
   color: #1a1a1a;
 }
@@ -64,11 +69,7 @@ li {
   background-color: #fdf0ed;
 }
 .banner_text {
-  font-size: 24px;
-  text-align: center;
   padding: 2rem 0 6rem 0.5rem;
-}
-.banner_text {
   font-size: 24px;
   text-align: center;
 }
@@ -76,6 +77,16 @@ li {
   color: #1a1a1a;
   font-size: 18vw;
   text-align: left;
+}
+@media (min-width: 768px) {
+  .banner_text--title {
+    font-size: 16vmin;
+  }
+}
+@media (min-width: 1024px) {
+  .banner_text--title {
+    width: 60%;
+  }
 }
 
 .main {
@@ -90,9 +101,19 @@ li {
   background-color: #3bab87;
 }
 .abouts_title {
-  font-size: 18vw;
+  font-size: 18vmin;
   display: inline-block;
   margin: -11.5rem 0;
+}
+@media (min-width: 870px) {
+  .abouts_title {
+    margin: -14.5rem 0;
+  }
+}
+@media (min-width: 870px) {
+  .abouts_title {
+    margin: -16.5rem 0;
+  }
 }
 .abouts_text {
   color: whitesmoke;
@@ -138,6 +159,12 @@ li {
   color: whitesmoke;
   color: #26565e;
 }
+@media (min-width: 768px) {
+  .abouts_more--paragraph {
+    width: 60%;
+    margin: 2rem auto;
+  }
+}
 
 .proyects {
   width: 90%;
@@ -145,9 +172,19 @@ li {
   background-color: #e9c3b9;
 }
 .proyects_title {
-  font-size: 18vw;
+  font-size: 18vmin;
   display: inline-block;
   margin: -11.5rem 0;
+}
+@media (min-width: 870px) {
+  .proyects_title {
+    margin: -14.5rem 0;
+  }
+}
+@media (min-width: 870px) {
+  .proyects_title {
+    margin: -16.5rem 0;
+  }
 }
 .proyects_text {
   text-align: center;
@@ -167,7 +204,7 @@ li {
 .proyects_container {
   background-color: #224953;
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 10 0%;
 }
 .proyects_container--child {
   height: 500px;
@@ -203,6 +240,17 @@ li {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+@media (min-width: 768px) {
+  .proyects_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .proyects_container--child {
+    font-size: 6vmin;
+  }
+  .proyects_container--child:nth-child(5) {
+    grid-column: 1/3;
+  }
 }
 
 @keyframes rotateplane {
@@ -300,7 +348,7 @@ li {
   background-color: #224953;
 }
 .contact_title {
-  font-size: 18vw;
+  font-size: 18vmin;
   display: inline-block;
   margin: -11.5rem 0;
 }
@@ -326,8 +374,39 @@ li {
   width: 10rem;
   margin-bottom: 3rem;
 }
-.contact_text--image {
+.contact_image {
   display: none;
+  filter: grayscale(1);
+}
+@media (min-width: 630px) {
+  .contact_text {
+    width: 70%;
+  }
+}
+@media (min-width: 870px) {
+  .contact {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
+  .contact_title {
+    margin: -8.5rem 0;
+  }
+  .contact_text {
+    width: 100%;
+    grid-column: 1;
+  }
+  .contact_image {
+    display: block;
+    width: 100%;
+  }
+  .contact_image img {
+    width: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  .contact_title {
+    margin: -10.5rem 0;
+  }
 }
 
 .go {
