--- a/src/styles/sass/components/_abouts.scss
+++ b/src/styles/sass/components/_abouts.scss
@@ -9,9 +9,15 @@
   margin-top: $mt;
   background-color: $green;
   &_title {
-    font-size: 18vw;
+    font-size: 18vmin;
     display: inline-block;
     margin: -11.5rem 0;
+    @media (min-width:870px) {
+      margin: -14.5rem 0;
+    }
+    @media (min-width:870px) {
+      margin: -16.5rem 0;
+    }
   }
   &_text {
     color: whitesmoke;
@@ -50,6 +56,10 @@
     &--paragraph {
       @include paragraph;
       color: $blue-font;
+      @media (min-width: 768px) {
+        width: 60%;
+        margin: 2rem auto;
+      }
 
     }
   }
