--- a/src/styles/sass/components/_banner.scss
+++ b/src/styles/sass/components/_banner.scss
@@ -3,17 +3,19 @@
     margin-top: $mt-title;
     background-color: $soft-pink;
     &_text{
-        font-size: 24px;
-    text-align: center;
         padding: 2rem 0 6rem .5rem;
-    }
-    &_text{
         font-size: 24px;
         text-align: center;
         &--title{
             color: $black;
             font-size: 18vw;
             text-align: left;
+            @media (min-width: 768px) {
+                font-size: 16vmin;
+            }
+            @media (min-width: 1024px){
+                width: 60%;
+            }
         }
     }
         
