--- a/src/styles/sass/components/_hedaer.scss
+++ b/src/styles/sass/components/_hedaer.scss
@@ -17,6 +17,9 @@
       display: flex;
       justify-content: space-evenly;
       font-size: 16px;
+      @media (min-width:768px) {
+        font-size: 20px;
+      }
       & a{
         color: $black;
       }
