--- a/src/styles/sass/components/_proyects.scss
+++ b/src/styles/sass/components/_proyects.scss
@@ -3,9 +3,15 @@
   margin-top: $mt;
   background-color: $pink;
   &_title {
-    font-size: 18vw;
+    font-size: 18vmin;
     display: inline-block;
     margin: -11.5rem 0;
+    @media (min-width:870px) {
+      margin: -14.5rem 0;
+    }
+    @media (min-width:870px) {
+      margin: -16.5rem 0;
+    }
   }
   &_text {
     text-align: center;
@@ -16,42 +22,17 @@
     justify-content: center;
     padding: 0 5rem;
     &--title {
-      // @include title;
       padding-bottom: 5rem;
       color: $black;
       line-height: 30px;
       font-size: 30px;
     }
-
-    // &--rotateplane {
-    //   width: 60px;
-    //   height: 60px;
-    //   background-color: $black;
-    //   display: inline-block;
-    //   clip-path: polygon(
-    //     20% 0%,
-    //     0% 20%,
-    //     30% 50%,
-    //     0% 80%,
-    //     20% 100%,
-    //     50% 70%,
-    //     80% 100%,
-    //     100% 80%,
-    //     70% 50%,
-    //     100% 20%,
-    //     80% 0%,
-    //     50% 30%
-    //   );
-    //   animation-name: rotateplane;
-    //   animation-duration: 2s;
-    //   animation-iteration-count: infinite;
-    //   animation-timing-function: linear;
-    // }
   }
   &_container {
     background-color: $strong-blue;
     display: grid;
-    grid-template-columns: 100%;
+    grid-template-columns: 10 0%;
+    
     &--child {
       height: 500px;
       color: whitesmoke;
@@ -83,6 +64,15 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+      }
+    }
+    @media (min-width: 768px) {
+      grid-template-columns: repeat(2, 1fr);
+      &--child{
+        font-size: 6vmin;
+        &:nth-child(5){
+          grid-column: 1 / 3;
+        }
       }
     }
   }
